[gd_scene load_steps=6 format=3 uid="uid://xljhxfdknfjm"]

[ext_resource type="FontFile" uid="uid://cwbt2ugsjq30h" path="res://font/Dihil.ttf" id="1_2bcsb"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_najo1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46eiw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1sqc6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grjn3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_najo1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 113.0
offset_top = 215.0
offset_right = 367.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_2bcsb")
theme_override_font_sizes/font_size = 64
text = "vicky"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 96.0
offset_top = 17.0
offset_right = 394.0
offset_bottom = 94.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_2bcsb")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -161.0
offset_right = 55.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.452824, 0.00265894, 0.84334, 1)
theme_override_colors/font_hover_color = Color(0.548503, 0.263447, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_2bcsb")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_46eiw")
theme_override_styles/hover = SubResource("StyleBoxFlat_1sqc6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_grjn3")
text = "Start"

[node name="messageTimer" type="Timer" parent="."]

[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_message_timer_timeout"]
